-- The name of the package.
name:                crypto-classical

version:             0.0.1

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Colin Woodbury

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          colingw@gmail.com

-- A copyright notice.
-- copyright:           

category:            Cryptography

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  exposed-modules: Crypto.Classical.Types
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.8
                     , bytestring
                     , containers >= 0.5.5.1
                     , crypto-numbers >= 0.2.7
                     , crypto-random
                     , lens >= 4.7
                     , modular-arithmetic >= 1.2.0.0
                     , random-shuffle >= 0.0.4
                     , transformers >= 0.4.2.0
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  